       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.42 (v0_8_42) on Linux (ld2058) on 1/15/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.42 (v0_8_42) on Linux (ld2058) on 1/15/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.42 (v0_8_42) on Linux (ld2058) on 1/15/2009 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.42 (v0_8_42) on Linux (ld2061) on 12/4/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.42 (v0_8_42) on Linux (ld2059) on 12/4/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.42 (v0_8_42) on Linux (ld2059) on 12/4/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.42 (v0_8_42) on Linux (ld2061) on 12/4/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.42 (v0_8_42) on Linux (ld2059) on 12/4/2008 ==

2008-12-04  Brian Kahne  <bkahne@freescale.com>

	* Added patches from Todd Dukes for fixing const* and regression
	problems, found when using gcc 4.2.x.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.41 (v0_8_41) on Linux (lb32001) on 9/4/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.41 (v0_8_41) on Linux (ld2058) on 9/4/2008 ==

2008-07-03  Brian Kahne  <bkahne@freescale.com>

	* Added the ability to shut-off the GC.  This is done by defining
	GC_DISABLED in gc/include/{gc_cpp.h,gc_allocator.h}.  Right now,
	you have to hand-edit these files; we could modify this so that it
	can be done by a configure variable, but I haven't implemented
	that yet.

2008-06-05  Brian Kahne  <bkahne@freescale.com>

	* Updated the libtool macro so that it works properly with the gcc
	4.1.1 found in /pkg.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.40 (v0_8_40) on Linux (lb32001) on 5/12/2008 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.40 (v0_8_40) on Linux (ld2058) on 2/26/2008 ==
