@@ -1,3 +1,10 @@
+2009-01-30  Brian Kahne  <bkahne@freescale.com>
+
+	* Got make distcheck to work.
+	
+	* Added checking code to configure.ac to modify tar arguments to
+	avoid tarfile corruption due to large UIDs.
+
        == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.42 (v0_8_42) on Linux (ld2058) on 1/15/2009 ==
 
        == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.42 (v0_8_42) on Linux (ld2058) on 1/15/2009 ==
